fix contrast

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body{
     margin: 0;
     padding: 0;
-    background: rgb(235, 235, 235);
+    background: rgba(255, 255, 255, 0);
     font-family: 'Trebuchet MS';
 }
 
@@ -62,7 +62,7 @@ nav img{
 }
 
 .form-group label{
-    color: #ffffff;
+    color: #000000;
 }
 
 
